syntax = "proto3";

package flyteidl.admin;
option go_package = "github.com/lyft/flyteidl/gen/pb-go/flyteidl/admin";

// Namespace within a project commonly used to differentiate between different service instances.
// e.g. "production", "development", etc.
message Domain {
    string id    = 1;

    // Display name.
    string name  = 2;
}

// Top-level namespace used to classify different entities like workflows and executions.
message Project {
    string id               = 1;

    // Display name.
    string name             = 2;

    repeated Domain domains = 3;

    string description      = 4;
}

message Projects {
    repeated Project projects = 1;
}

message ProjectListRequest {
}

message ProjectRegisterRequest {
    Project project                       = 1;
}

message ProjectRegisterResponse {
}
